<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="@dimen/size_20dp"
        android:layout_height="@dimen/size_20dp"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/auth_back" />

    <TextView
        android:id="@+id/txt_login_title"
        style="@style/WrapWrap"
        android:layout_marginTop="@dimen/size_32dp"
        android:gravity="center"
        android:text="@string/auth_login_for_more"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/img_close"
        app:layout_constraintTop_toBottomOf="@+id/img_close"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_agreement1"
        style="@style/WrapWrap"
        android:layout_marginTop="@dimen/size_10dp"
        android:gravity="center"
        android:textColor="@color/auth_login_with_another"
        android:textSize="@dimen/font_15sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/txt_login_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_title"
        tools:text="@string/auth_agreement"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_64dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:background="@drawable/auth_login_button"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/auth_login_with_key" />

    <TextView
        android:id="@+id/txt_agreement2"
        style="@style/WrapWrap"
        android:layout_marginTop="@dimen/size_10dp"
        android:gravity="center"
        android:textColor="@color/auth_login_with_another"
        android:textSize="@dimen/font_15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:text="@string/auth_agreement"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_login_with_another"
        style="@style/WrapWrap"
        android:layout_marginBottom="@dimen/size_32dp"
        android:gravity="center"
        android:textColor="@color/auth_login_with_another"
        android:textSize="@dimen/font_18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/auth_login_with_another"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txt_username"
        style="@style/WrapWrap"
        android:layout_marginBottom="@dimen/size_20dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/auth_login"
        tools:visibility="visible" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/size_96dp"
        android:layout_height="@dimen/size_96dp"
        android:layout_marginBottom="@dimen/size_4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txt_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        tools:src="@drawable/auth_default_profile"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/layout_verify_code"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginBottom="@dimen/size_48dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        tools:visibility="visible">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/auth_login_input"
            android:ellipsize="end"
            android:hint="@string/auth_input_verify_code"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingLeft="@dimen/size_10dp"
            android:paddingRight="@dimen/size_10dp"
            android:singleLine="true"
            android:textColor="@color/auth_login_agreement"
            android:textColorHint="@color/auth_login_agreement"
            android:textSize="@dimen/font_17sp" />

        <TextView
            android:id="@+id/txt_verify_code"
            android:layout_width="@dimen/size_96dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_10dp"
            android:background="@drawable/auth_login_input"
            android:gravity="center"
            android:text="@string/auth_verify_code"
            android:textColor="@color/auth_login_agreement"
            android:textSize="@dimen/font_16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_phone"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginBottom="@dimen/size_8dp"
        android:background="@drawable/auth_login_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/size_10dp"
        android:paddingRight="@dimen/size_10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/layout_verify_code"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        tools:visibility="visible">

        <TextView
            android:id="@+id/txt_phone_prefix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="+86"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16sp" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:background="@null"
            android:hint="@string/auth_input_telephone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/auth_login_agreement"
            android:textColorHint="@color/auth_login_agreement"
            android:textSize="@dimen/font_17sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>